<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".ui.newsDetails.DetailFragment">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1">

        <ImageView
            android:id="@+id/news_image"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:contentDescription="@string/content_description"
            android:scaleType="fitXY"
            android:src="@drawable/ic_launcher_background" />

        <ImageButton
            android:id="@+id/bookmark_button"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:layout_alignParentEnd="true"
            android:layout_marginTop="12dp"
            android:layout_marginEnd="15dp"
            android:background="@drawable/circular_button_background"
            android:scaleType="centerInside"
            android:src="@drawable/bookmark_outline"
            android:padding="8dp"
            android:contentDescription="@string/bookmark_button" />


        <TextView
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            android:id="@+id/news_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_above="@id/linear"
            android:ellipsize="end"
            android:lineSpacingExtra="4dp"
            android:lines="2"
            android:maxLines="2"
            android:text="@string/placeholder_title"
            android:textStyle="bold" />

        <LinearLayout
            android:id="@+id/linear"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="50dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/author_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/author_name"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/published_date"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:text="@string/placeholder_date"
                android:textStyle="bold" />

        </LinearLayout>


    </RelativeLayout>

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="-20dp"
        android:layout_weight="1"
        android:background="@color/black"
        app:cardCornerRadius="20dp">

        <LinearLayout
            android:layout_margin="10dp"
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <com.google.android.material.imageview.ShapeableImageView
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:contentDescription="@string/content_description"
                    android:scaleType="fitXY"
                    app:shapeAppearanceOverlay="@style/CustomImageViewShape"
                    android:src="@drawable/broken_image_two" />

                <TextView
                    android:id="@+id/source_name"
                    android:layout_gravity="center_vertical"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="10dp"
                    android:text="@string/placeholder_source_name"
                    android:textStyle="bold" />

            </LinearLayout>

            <TextView
                android:id="@+id/news_description"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:lineSpacingExtra="4dp"
                android:text="@string/placeholder_description" />
        </LinearLayout>
    </androidx.cardview.widget.CardView>

</LinearLayout>