<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal"
    android:paddingStart="8dp"
    android:paddingEnd="8dp"
    android:paddingTop="10dp">

    <com.google.android.material.imageview.ShapeableImageView
        android:id="@+id/news_image"
        android:layout_width="100dp"
        android:layout_height="115dp"
        android:scaleType="fitXY"
        android:src="@drawable/ic_launcher_background"
        app:shapeAppearanceOverlay="@style/CustomImageViewShape" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginStart="10dp"
        android:orientation="vertical">

        <TextView
            android:id="@+id/news_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/placeholder_title"
            android:textStyle="bold"
            android:maxLines="2"
            android:ellipsize="end"
            android:lines="2" />

        <TextView
            android:layout_weight="1"
            android:layout_marginTop="5dp"
            android:id="@+id/news_description"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:text="@string/placeholder_description"
            android:maxLines="2"
            android:ellipsize="end"
            android:lines="2" />


        <LinearLayout
            android:layout_marginTop="8dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_weight="1"
                android:id="@+id/source_name"
                android:layout_width="0dp"
                android:maxLines="1"
                android:layout_gravity="center_vertical"
                android:ellipsize="end"
                android:lines="1"
                android:layout_height="wrap_content"
                android:text="@string/placeholder_source_name"
                android:textStyle="bold" />

            <ImageButton
                android:id="@+id/bookmark_button"
                android:layout_width="28dp"
                android:layout_height="28dp"
                android:background="@drawable/circular_button_background"
                android:scaleType="centerInside"
                android:src="@drawable/bookmark_outline"
                android:padding="8dp"
                android:contentDescription="@string/bookmark_button" />

        </LinearLayout>
    </LinearLayout>

</LinearLayout>